2007-05-14  László Monda <laci@monda.hu> 

        * MainWindow.cs, InfoBar.cs, uc.mdp, ChangeLog, uc.mds,
          gtk-gui/UltimateCommander.MainWindow.cs, gtk-gui/gui.stetic:
          Migrate the main window from Glade to Stetic.

2007-05-02  László Monda <laci@monda.hu> 

	* ChangeLog, Config.cs uc.mdp: Make the color of the slot of
          the unselected active panel brighter so it doesn't seem like
          it's sensitive.

2007-04-06 21:30  László Monda <laci@monda.hu> 

	* Config.cs, CreateDirectoryDialog.cs, Dialog.cs, File.cs,
	  Frame.cs, MainWindow.cs, Panel.cs, Slot.cs,
	  UltimateCommander.cs, Util.cs, View.cs, gui/uc.glade, uc.mdp:
	  Implement dialog handling and reimplement directory creation
	  using it.

2006-08-02 23:02  László Monda <laci@monda.hu> 

	* Panel.cs: When renaming, place the cursor to the end of the
	  selection.

2006-08-02 22:50  László Monda <laci@monda.hu> 

	* MainWindow.cs, gui/uc.glade: Redefine hotkeys of Create
	  Directory and Rename according to the OFM standard.

2006-07-25 00:20  László Monda <laci@monda.hu> 

	* gui/uc.glade: Realign the TextView of the CreateDirectoryWidget.

2006-06-26 14:11  László Monda <laci@monda.hu> 

	* AttributeIcons.cs, File.cs, uc.mds: Improve attribute icon.

2006-05-19 14:47  László Monda <laci@monda.hu> 

	* CreateDirectoryWidget.cs, Panel.cs, gui/uc.glade: Add OK and
	  Cancel buttons to CreateDirectoryWidget.

2006-05-13 12:29  László Monda <laci@monda.hu> 

	* CreateDirectoryWidget.cs: Add file.

2006-05-01 23:23  László Monda <laci@monda.hu> 

	* File.cs, InfoBar.cs, MainWindow.cs, Notifier.cs, Panel.cs,
	  Slot.cs, UnreadableDirectoryNotifier.cs, Util.cs, gui/uc.glade,
	  uc.mdp: Implement directory creation.

2006-05-01 20:04  László Monda <laci@monda.hu> 

	* gui/uc.glade: Add some space on the edges of notifiers to not to
	  be so crowded.

2006-05-01 20:01  László Monda <laci@monda.hu> 

	* InvalidEncodingNotifier.cs, Notifier.cs, Panel.cs, PanelView.cs,